...
      <Tab.Screen
        name="JourneyTab"
        component={JourneyScreen}
        options={({ navigation }) => ({
          title: "Journey",
          tabBarAccessibilityLabel: "Journey tab",
          tabBarButtonTestID: "tab-journey",
          headerTitle: () => (
            <HeaderTitle title="Journey" subtitle={persona?.name} />
          ),
          tabBarIcon: ({ focused }) => (
            <TabBarIcon focused={focused} filled="map" outline="map-outline" />
          ),
...
